tried to fix safari horizontal scroll

--- a/scss/critical.scss
+++ b/scss/critical.scss
@@ -54,6 +54,7 @@
 
 html,body {
 	font-size: 1rem;
+	overflow-x: hidden;
 }
 
 .loading-circle {
